--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,12 @@
   command = "yarn build"
   publish = "docs/dist"
 
+# Build settings for the v0.0.1-test branch
+[context.v0-0-1-test]
+  command = "yarn build"
+  [context.v0-0-1-test.environment]
+    VERSION_PATH = "/v0.0.1-test/"
+
 # === Redirects and Rewrites ===
 # Rules are processed from top to bottom, with the first matching rule taking precedence.
 # This is a proxy rewrite, which fetches content from another site while keeping the URL in the browser.
