--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,6 @@
 # This is a proxy rewrite, which fetches content from another site while keeping the URL in the browser.
 [[redirects]]
   from = "/v0.0.1-test/*"
-  to = "https://v0.0.1-test--aztec-docs-2.netlify.app/:splat" # replace this url with the branch deployment url
+  to = "https://v0-0-1-test--aztec-docs-2.netlify.app/:splat" # replace this url with the branch deployment url
   status = 200
   force = true
