Enhance Netlify redirect configuration for v0.0.1-test branch by correcting URL format and adding custom headers.

--- a/netlify.toml
+++ b/netlify.toml
@@ -18,6 +18,9 @@
 # This is a proxy rewrite, which fetches content from another site while keeping the URL in the browser.
 [[redirects]]
   from = "/v0.0.1-test/*"
-  to = "https://v0-0-1-test--aztec-docs-2.netlify.app/:splat" # replace this url with the branch deployment url
+  to = "https://v0-0-1-test--aztec-docs-2.netlify.app/v0.0.1-test/:splat"
   status = 200
   force = true
+  
+  [redirects.headers]
+    X-Proxied-Version = "v0.0.1-test"
