--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,7 @@
 # Build settings for the v0.0.1-test branch
 # Netlify converts dots in branch names to hyphens for context names
 [context."v0.0.1-test"]
-  command = "yarn build"
+  command = "VERSION_PATH=/v0.0.1-test/ yarn build"
   [context."v0.0.1-test".environment]
     VERSION_PATH = "/v0.0.1-test/"
 
