Add redirect rules in Netlify configuration to route root and documentation paths for improved navigation.

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,16 @@
   command = "yarn build"
   publish = "docs/dist"
 
+# Redirect requests from the root to your base path
+[[redirects]]
+  from = "/"
+  to = "/docs"
+  status = 301
+  force = true
+
+# Rewrite all other paths to your base path
+[[redirects]]
+  from = "/docs/*"
+  to = "/docs/:splat"
+  status = 200
+
